cmake_minimum_required(VERSION 3.1)
enable_language (CXX)
find_package(CUDA REQUIRED)
find_package(OpenMP REQUIRED)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
list (APPEND CMAKE_C_FLAGS ${OpenMP_C_FLAGS})
list (APPEND CMAKE_CXX_FLAGS ${OpenMP_CXX_FLAGS})
list (APPEND CUDA_NVCC_FLAGS "-std c++11")
project(bsde)
aux_source_directory(baseline BASELINE)
aux_source_directory(omp      OMP)
add_executable(baseline ${BASELINE})
add_executable(omp      ${OMP})
cuda_add_executable(cuda cuda/helper_cuda.h cuda/helper_string.h cuda/kernel.cu)
