cmake_minimum_required(VERSION 3.1)
enable_language(CXX)
enable_testing()
find_package(CUDA REQUIRED)
find_package(OpenMP REQUIRED)
find_program(BASH bash)
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
list(APPEND CMAKE_CXX_FLAGS ${OpenMP_CXX_FLAGS})
list(APPEND CUDA_NVCC_FLAGS "-std c++11")
project(bsde)
aux_source_directory(baseline BASELINE)
aux_source_directory(omp      OMP)
add_executable(baseline ${BASELINE})
add_executable(omp      ${OMP})
target_compile_options(baseline PUBLIC "-Ofast")
target_compile_options(omp PUBLIC "-Ofast")
cuda_add_executable(cuda cuda/helper_cuda.h cuda/helper_string.h cuda/kernel.cu)
add_test(test_baseline ${BASH} ${CMAKE_CURRENT_SOURCE_DIR}/test_baseline.sh)
add_test(test_omp ${BASH} ${CMAKE_CURRENT_SOURCE_DIR}/test_omp.sh)
